# timeflowerdata

./: README.md  pyproject.toml  timelineschema.json
.github/workflows/: generate-artifacts.yml  release_schema.yml
python/: generate_pydantic_models.py
python/src/timeflowerdata_schema/: __init__.py  timeline_models.py
